fix collapse bug

--- a/_sass/_resume.scss
+++ b/_sass/_resume.scss
@@ -157,7 +157,7 @@
   }
 
   .resume-item-copy{
-    line-height: .5;
+    line-height: 1;
   }
   
   .resume-item-title,
